ENG-940 Fix alignment of language selection dropdown

--- a/sass/internal-page/InternalPage.scss
+++ b/sass/internal-page/InternalPage.scss
@@ -86,6 +86,9 @@
 
   &__dropdown-legacy {
     background: $color-legacy-header-bg-grey;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-size: 12px;
   }
 
   &__option {
@@ -118,7 +121,6 @@
 .nav-pf-vertical { //sass-lint:disable-line class-name-format
   .list-group-item > a { // sass-lint:disable-line force-element-nesting class-name-format
     padding-left: 10px;
-    max-width: 200px;
   }
 }
 
